--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "mocha test/**/*.test.js --timeout 10000"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chai": "^6.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0",
     "supertest": "^7.1.4",
