--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "prettier": "prettier --write \"**/*.{js,json}\" --ignore-path .gitignore"
   },
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "chai": "^6.0.1",
-    "express": "^4.18.2",
+    "dotenv": "^17.2.2",
+    "express": "^4.21.2",
+    "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0",
