--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "prettier": "3.6.2"
   }
 }
