--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -27,4 +27,7 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run test
+      - run: npm run test-controller
+      - run: npm start &
+      - run: sleep 5
+      - run: npm run test-external
