--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.1",
+    "mochawesome": "^7.1.4",
     "sinon": "^21.0.0",
     "supertest": "^7.1.4",
     "swagger-ui-express": "^4.6.3"
