--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -32,8 +32,17 @@ jobs:
         name: Upload artifacts
         if: ${{ !cancelled() }} 
         with:
-          name: test-results
-          path: report/test-results.json
+          name: test-controller-results
+          path: report/test-controller-results.json
+
+      - uses: dorny/test-reporter@v2
+        name: Publish test results
+        with:
+          artifact: test-controller-results           
+          name: Mocha Tests                 
+          path: 'test-controller-results.json'    
+          reporter: mocha-json      
+
       - run: npm start &
       - run: sleep 5
       - run: npm run test-external
@@ -41,13 +50,13 @@ jobs:
         name: Upload artifacts
         if: ${{ !cancelled() }} 
         with:
-          name: test-results
-          path: report/test-results.json
+          name: test-external-results
+          path: report/test-external-results.json
 
       - uses: dorny/test-reporter@v2
         name: Publish test results
         with:
-          artifact: test-results            
+          artifact: test-external-results            
           name: Mocha Tests                 
-          path: 'test-results.json'    
+          path: 'test-external-results.json'    
           reporter: mocha-json      
