Update pipeline to run graphql tests

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "API Rest para cadastro de contatos com Express, banco em memória e Swagger",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start:rest": "node server.js",
+    "start:graphql": "node graphql/server.js",
     "test": "mocha test/**/*.test.js --timeout 10000",
     "test-controller": "mocha test/rest/controller/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
     "test-external": "mocha test/rest/external/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
+    "test-external-graphql": "mocha test/graphql/external/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
     "prettier": "prettier --write \"**/*.{js,json}\" --ignore-path .gitignore"
   },
   "dependencies": {
