--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start:rest": "node server.js",
     "start:graphql": "node graphql/server.js",
     "test": "mocha tests/api/**/*.test.js --timeout 10000",
-    "test-controller": "mocha tests/api/controller/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
-    "test-external": "mocha tests/api/external/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
+    "test-controller": "mocha tests/api/rest/controller/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
+    "test-external": "mocha tests/api/rest/external/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
     "test-external-graphql": "mocha tests/api/graphql/external/**/*.test.js --timeout 10000 --reporter json > report/test-results.json",
     "prettier": "prettier --write \"**/*.{js,json}\" --ignore-path .gitignore"
   },
