--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "API Rest para cadastro de contatos com Express, banco em memória e Swagger",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start:rest": "node server.js",
     "start:graphql": "node graphql/server.js",
