--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -87,4 +87,4 @@ jobs:
         env:
           BASE_URL: ${{ secrets.BASE_URL}}
         with:
-          path: .tests/k6/*.test.js
+          path: ./tests/k6/*.test.js
