--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -90,3 +90,5 @@ jobs:
           K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: ./tests/k6/*.test.js
+          cloud-run-locally: false
+          cloud-comment-on-pr: true
