--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches: ["main"]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -91,3 +96,20 @@ jobs:
           path: ./tests/k6/*.test.js
           cloud-run-locally: false
           cloud-comment-on-pr: true
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Directory containing the static site files
+          path: './report/k6-result.html'
+      
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
