--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -96,7 +96,7 @@ jobs:
           K6_WEB_DASHBOARD_EXPORT: html-report.html
         with:
           path: ./tests/k6/*.test.js
-          cloud-run-locally: false
+          cloud-run-locally: true
           cloud-comment-on-pr: true
 
       - name: Upload artifact
